Поправили обоснование причин

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -128,7 +128,7 @@
 
 \noindent {\it Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} {\bfИсследование доступности информационных сервисов для мобильных пользователей.}\\
 {\bf Аннотация.} 
-Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Основной проблемой эффективного взаимодействия элементов ИТС является обеспечение постоянной надежной связи между ее элементами. В статье рассматриваются варианты решения этой проблемы позволяющие увеличить время доступа к сервисам информационной облачной среды. Рассмотрены варианты построения мультипротокольного сетевого узла. Описана имитационная модель сети передачи экстренных сообщений и определен перечень параметров моделирования в среде ns-3. Результаты моделирования демонстрируют увеличение времени доступа к сервисам облачной среды обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения.\\
+Интеллектуальная  транспортная  сеть позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Основной проблемой эффективного взаимодействия элементов ИТС является обеспечение постоянной надежной связи между ее элементами. В статье рассматриваются варианты решения этой проблемы позволяющие увеличить время доступа к сервисам информационной облачной среды. Рассмотрены варианты построения мультипротокольного сетевого узла. Описана имитационная модель сети передачи экстренных сообщений и определен перечень параметров моделирования в среде ns-3. Результаты моделирования демонстрируют увеличение времени доступа к сервисам облачной среды обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения.\\
 {\bf Ключевые слова:}
 автомобильные сервисы, mesh, 802.11s, LTE, IDM, облачные сервисы, мультипротокольный узел, протоколы передачи данных, протоколы маршрутизации, имитационное моделирование, ns--3.
 
