--- a/implementation.tex
+++ b/implementation.tex
@@ -90,7 +90,7 @@
 
 На рисунке рис.~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде от использованных протоколов беспроводной маршрутизации и скорости передачи данных. 
  
-Потери сообщений составили от 10 до 46\%. Потери растут с увеличением скорости передачи. При увеличении скорости передачи в два раза объем потерянных сообщений увеличивается в три раза. Наибольшие потери наблюдаются при использовании протокола OLSR. 
+Потери сообщений составили от 10 до 46\%. Потери растут с увеличением скорости передачи. При увеличении скорости передачи в два раза объем потерянных сообщений увеличивается в три раза, по причине увеличения объёма широковещательных сообщений в запросах на построение пути. Наибольшие потери наблюдаются при использовании протокола OLSR. 
 
 2.2 Протокол маршрутизации HWMP. Размер передаваемого пакета 1024 байта. Плотность движения по трассе 8, 16 автомобилей на 800 метров. Скорость движения 10…100 миль/час. Число узлов с интерфейсом LTE - один. 
 
@@ -101,7 +101,7 @@
  \label{fig:alarm_densety}}
 \end{figure}
 
-Из графика на рис.~\ref{fig:alarm_densety} следует, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы процент потерь составляет 78-92\%. 
+Из графика на рис.~\ref{fig:alarm_densety} следует, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы процент потерь составляет 78-92\%. Причиной такого объёма потерь является короткое время нахождения автомобилей в зоне радиовидимости, что не позволяет построить путь для доставки сообщения в облачную среду.
 
 Сократить процент потерянных сообщений можно за счёт  увеличения плотности машин находящихся в радиусе действия передатчика mesh, что позволит использовать больше альтернативных путей доставки сообщений. 
 
