правка заключения и опечаток

--- a/decision.tex
+++ b/decision.tex
@@ -10,4 +10,4 @@
 
 Важнейшими задачами построения такой сети является выбор вариантов использования протоколов маршрутизации и передачи данных для повышения достоверности передачи сообщений. Определение времени доставки сообщений к облачным сервисам и абонентам  сети в зависимости от интенсивности трафика движения автомобилей, трафика загрузки сети передачи данных, наличия и состава интерфейсов на автомобилях.
 
-Рассмотрим мобильную  сеть с мультипротокольным ядром, содержащим 2 технологии 802.11s  и LTE. Проведем исследование ее основных характеристик "процент потерь сообщений" и "фактическая скорость передачи данных". Методом исследования является имитационное моделирование.
+Рассмотрим мобильную  сеть с мультипротокольным ядром, содержащим 2 технологии 802.11s  и LTE. Проведено исследование ее основных характеристик "процент потерь сообщений" и "фактическая скорость передачи данных". Методом исследования является имитационное моделирование.
