--- a/implementation.tex
+++ b/implementation.tex
@@ -33,7 +33,7 @@
 
 \end{itemize}
 
-Предложенная схема взаимодействия модулей позволяет комбинировать протоколы маршрутизации, сетевые интерфейсы, модели движения узлов сети. Параметры моделирования передаются в класс NetworkNodes, где происходит выбор и настройка протоколов маршрутизации, создание нескольких сетевых интерфейсов, установка скорости передачи данных, числа передающих узлов и типа сетевого трафика. Результатом моделирования является набор xml-файлов сгенерированных модулем FlowMonitor.
+Предложенная схема взаимодействия модулей позволяет комбинировать протоколы маршрутизации, сетевые интерфейсы, модели движения узлов сети. Параметры моделирования передаются в класс NetworkNodes, где происходит выбор и настройка протоколов маршрутизации, создание нескольких сетевых интерфейсов, установка скорости передачи данных, числа передающих узлов и типа сетевого трафика. Результатом моделирования является набор xml-файлов, сгенерированных модулем FlowMonitor.
  
 Для реализации комбинации беспроводных сетей разработана модель подвижного мультипротокольного узла с набором сетевых интерфейсов. Для реализации мультипротокольного узла добавлен новый класс, позволяющий комбинировать интерфейсы стандартов: 802.11abg, 802.11s, 802.11p, LTE. 
 
