--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,10 +1,12 @@
 {\bf{\SetMySection} Заключение.} В результате проделанной работы:   
 
 \begin{enumerate}
+\item[$-$] в качестве решения, позволяющего повысить доступность сервисов облачной среды, для абонентов автомобильной сети предложено использование мультипротокольного узла, обеспечивающего доступ к глобальным сетям передачи данных и mesh
 
-\item[$-$] разработана имитационная модель mesh сети с мультипротокольным узлом.
-поставлены и проведены экспериментальные исследования возможностей сети с мультипрокольным узлом (802.11 и LTE).
+\item[$-$] на основе модели мультипротокольных узлов разработана имитационная модель автомобильной mesh сети, реализованной на базе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3
 
-\item[$-$] определены параметры имитационной модели диапазоны, при которых обеспечивается надежный доступ к облачным сервисам при передаче коротких экстренных сообщений. 
+\item[$-$] с использованием созданной модели проведена серия экспериментов, на основании результатов которых, подтверждено предположение о том, что применение автомобильной mesh сети существенно повышает время доступности облачных сервисов обмена экстренными сообщениями в различных: конфигурациях автомобильной mesh сети; свойствах сетевого трафика и особенностях организации дорожного движения.
+
+\item[$-$] определены параметры имитационной модели и диапазоны значений параметров сетей передачи данных и организации дорожного движения, при которых обеспечивается надёжный доступ к облачным сервисам при передаче коротких экстренных сообщений. 
 
 \end{enumerate}
