--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 {\bf{\SetMySection}~Введение.} 
-Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределенные информационные ресурсы можно рассматривать как облачную среду [ ], предоставляющую сервисы мобильным абонентам.
+Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределённые информационные ресурсы можно рассматривать как облачную среду [ ], предоставляющую сервисы мобильным абонентам.
 
 Абонентами  информационных услуг ИТС являются:
 
@@ -20,7 +20,7 @@
 
 \begin{enumerate}
 
-\item[$-$] оперативную помощь в сложных или аварийных ситуациях (отправка сообщений <<SOS>>, сообщений о ДТП, cообщения о чрезвычайных ситуациях)\cite{Ford.co.uk};
+\item[$-$] оперативную помощь в сложных или аварийных ситуациях (отправка сообщений <<SOS>>, сообщений о ДТП, сообщения о чрезвычайных ситуациях)\cite{Ford.co.uk};
 
 \item[$-$] мониторинг обстановки на трассе движения (сообщение о погодных условиях и состоянии дорожного покрытия, оперативные изменения в транспортной сети, сообщения о правилах регулирования дорожного движения, сбор и отображение данных о местоположении автомобилей других участников движения);
 
@@ -35,7 +35,7 @@
 
 \end{enumerate}
 
-Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объемы передаваемых сообщений 500-1000 байт [ ].
+Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объёмы передаваемых сообщений 500-1000 байт [ ].
 
 Традиционно связь мобильных абонентов с облачными сервисам осуществляется через сеть стационарных станций телекоммуникационных компаний. Однако, стационарные станции не охватывают все регионы,
 %и устанавливают связь только в зоне прямой видимости мобильного абонента%
