--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
 \item[$-$] в качестве решения, позволяющего повысить доступность сервисов облачной среды, для абонентов автомобильной сети предложено использование мультипротокольного узла, обеспечивающего доступ к глобальным сетям передачи данных и mesh
 
-\item[$-$] на основе модели мультипротокольных узлов разработана имитационная модель автомобильной mesh сети, реализованной на базе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3
+\item[$-$] на основе предложенной модели мультипротокольного узла разработана имитационная модель автомобильной mesh сети, реализованной на базе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3
 
 \item[$-$] с использованием созданной модели проведена серия экспериментов, на основании результатов которых, подтверждено предположение о том, что применение автомобильной mesh сети существенно повышает время доступности облачных сервисов обмена экстренными сообщениями в различных: конфигурациях автомобильной mesh сети; свойствах сетевого трафика и особенностях организации дорожного движения.
 
