последняя версия без литературы

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -128,13 +128,13 @@
 
 \noindent {\it Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} {\bfИсследование доступности информационных сервисов для мобильных пользователей.}\\
 {\bf Аннотация.} 
-Интеллектуальная  транспортная  сеть позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Основной проблемой эффективного взаимодействия элементов ИТС является обеспечение постоянной надежной связи между ее элементами. В статье рассматриваются варианты решения этой проблемы позволяющие увеличить время доступа к сервисам информационной облачной среды. Рассмотрены варианты построения мультипротокольного сетевого узла. Описана имитационная модель сети передачи экстренных сообщений и определен перечень параметров моделирования в среде ns-3. Результаты моделирования демонстрируют увеличение времени доступа к сервисам облачной среды обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения.\\
+Интеллектуальная  транспортная  сеть позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Основной проблемой эффективного взаимодействия элементов интеллектуальной транспортной сети является обеспечение постоянной надежной связи между ее элементами. В статье рассматриваются варианты решения этой проблемы позволяющие увеличить время доступа к сервисам информационной облачной среды. Рассмотрены варианты построения мультипротокольного сетевого узла. Описана имитационная модель сети передачи экстренных сообщений и определен перечень параметров моделирования в среде ns-3. Результаты моделирования демонстрируют увеличение времени доступа к сервисам облачной среды обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения.\\
 {\bf Ключевые слова:}
 автомобильные сервисы, mesh, 802.11s, LTE, IDM, облачные сервисы, мультипротокольный узел, протоколы передачи данных, протоколы маршрутизации, имитационное моделирование, ns--3.
 
 \vskip 2mm
 
-\noindent {\it Glazunov V.\,V., Kurochkin L.\,M., Kurochkin M.\,A., Popov S.\,G.\/} {\bf The research of service availability of mobile users in cloud oriented multiprotocol surplus network of vehicles.}\\
+\noindent {\it Glazunov V.\,V., Kurochkin L.\,M., Kurochkin M.\,A., Popov S.\,G.\/} {\bf The research of information service availability for mobile users.}\\
 {\bf Abstract.} 
 Intelligent traffic network allows to improve safety of traffic participants and simplifies access to information resources. The main problem of efficient interaction between elements of intelligent traffic network is provision for permanent reliable connections between them. The article discusses such solitions to the problem that allow to increase availability of information cloud environment services. Multiprotocol network node building options were considered. Simulation model of emergency messages transfer network was built within "NS--3" network simulation environment and the set of simulation parameters was defined. Simulation results show increase in availability of the emergency messages transfer cloud services in different configurations of automotive mesh network, network traffic properties and road traffic characteristics.\\
 {\bf Keywords:}
