--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,12 +1,25 @@
 {\bf{\SetMySection} Заключение.} В результате проделанной работы:   
 
 \begin{enumerate}
-\item[$-$] в качестве решения, позволяющего повысить доступность сервисов облачной среды, для абонентов автомобильной сети предложено использование мультипротокольного узла, обеспечивающего доступ к глобальным сетям передачи данных и mesh
+%\item[$-$] в качестве решения, позволяющего повысить доступность сервисов облачной среды, для абонентов автомобильной сети предложено использование мультипротокольного узла, обеспечивающего доступ к глобальным сетям передачи данных и mesh
 
-\item[$-$] на основе предложенной модели мультипротокольного узла разработана имитационная модель автомобильной mesh сети, реализованной на базе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3
+%\item[$-$] на основе предложенной модели мультипротокольного узла разработана имитационная модель автомобильной mesh сети, реализованной на базе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3
 
-\item[$-$] с использованием созданной модели проведена серия экспериментов, на основании результатов которых, подтверждено предположение о том, что применение автомобильной mesh сети существенно повышает время доступности облачных сервисов обмена экстренными сообщениями в различных: конфигурациях автомобильной mesh сети; свойствах сетевого трафика и особенностях организации дорожного движения.
+%\item[$-$] с использованием созданной модели проведена серия экспериментов, на основании результатов которых, подтверждено предположение о том, что применение автомобильной mesh сети существенно повышает время доступности облачных сервисов обмена экстренными сообщениями в различных: конфигурациях автомобильной mesh сети; свойствах сетевого трафика и особенностях организации дорожного движения.
 
-\item[$-$] определены параметры имитационной модели и диапазоны значений параметров сетей передачи данных и организации дорожного движения, при которых обеспечивается надёжный доступ к облачным сервисам при передаче коротких экстренных сообщений. 
+%\item[$-$] определены параметры имитационной модели и диапазоны значений параметров сетей передачи данных и организации дорожного движения, при которых обеспечивается надёжный доступ к облачным сервисам при передаче коротких экстренных сообщений. 
+
+
+
+
+\item[$-$]сформулированы проблемы, затрудняющие мобильным абонентам устойчивый доступ к информационным сервисам;
+
+\item[$-$]предложен вариант объединения известных технологий передачи данных с мобильной mesh сетью (стандарт 802.11s) с целью  расширения зоны устойчивого  доступа мобильным абонентам к информационным сервисам  без изменения инфраструктуры базовых станций и их характеристик;
+
+\item[$-$]разработана имитационная модель автомобильной mesh сети, реализованная на базе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3;
+
+\item[$-$]поставлены и проведены экспериментальные исследования возможностей мобильной сети с мультипрокольным узлом (802.11s и LTE);
+
+\item[$-$]определены диапазоны значений параметров имитационной модели, при которых обеспечивается надежный доступ к облачным сервисам при передаче коротких экстренных сообщений. 
 
 \end{enumerate}
