--- a/decision.tex
+++ b/decision.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection}Предлагаемые решения.}
+{\bf{\SetMySection} Предлагаемые решения.}
 В качестве решения поставленной задачи предлагается объединение известных технологий передачи данных  с мобильной mesh сетью (стандарт 802.11s). В условиях высокой динамики автомобильной сети режим mesh, обеспечивает процедуру самоорганизации абонентов. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно.
 %Пример выбора альтернативных путей передачи сообщений с использованием mesh, DSRC и глобальных каналов связи на примере систем передачи экстренных сообщений систем <<ЭРА-ГЛОНАСС>> и <<eCall>> приведена на рис.  .
 
@@ -10,4 +10,4 @@
 
 Важнейшими задачами построения такой сети является выбор вариантов использования протоколов маршрутизации и передачи данных для повышения достоверности передачи сообщений. Определение времени доставки сообщений к облачным сервисам и абонентам  сети в зависимости от интенсивности трафика движения автомобилей, трафика загрузки сети передачи данных, наличия и состава интерфейсов на автомобилях.
 
-Рассмотрим мобильную  сеть с мультипротокольным ядром, содержащим 2 технологии 802.11s  и LTE. Проведено исследование ее основных характеристик "процент потерь сообщений" и "фактическая скорость передачи данных". Методом исследования является имитационное моделирование.
+Рассмотрим мобильную  сеть с мультипротокольным ядром, содержащим 2 технологии 802.11s  и LTE и исследуем её основные характеристики: "процент потерь сообщений", "фактическая скорость передачи данных". Методом исследования является имитационное моделирование.
