--- a/implementation.tex
+++ b/implementation.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection}Описание экспериментов.} 
+{\bf{\SetMySection} Описание экспериментов.} 
 
 В качестве ядра среды моделирования использовался дискретно-событийный стимулятор телекоммуникационных систем ns--3\cite{Nsnam.org}. Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL. Исходные коды ns--3 открыты для исследования, модификации. В качестве встроенного языка описания моделей используются C++ и Python.
 
@@ -47,7 +47,7 @@
 
 \item число узлов сети: 4-16;
 
-\item параметры трассы: 800 м. с 4-я поворотами (90 градусов), движение двустороннее;
+\item параметры трассы: длина 800 м.; 4 поворота (90 градусов); движение двустороннее;
 
 \item скорость передачи данных: 8-2048 Кбит/сек;
 
@@ -63,7 +63,7 @@
 
 С разработанной моделью проведены 2 группы экспериментов:
 
-1.	Влияние протоколов маршрутизации на скорость передачи данных
+1.	Влияние протоколов маршрутизации на скорость передачи данных.
 
 Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик, передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Число узлов с интерфейсом LTE - один. Фактическая скорость передачи данных определялась модулем анализатора трафика компьютерных сетей. Экспериментальные результаты приведены на рис.   .
 
@@ -73,7 +73,7 @@
 
 2.	Влияние параметров движения транспортных средств и протоколов на потери сообщений
 
-2.1 Рассмотрены протоколы маршрутизации HWMP, OLSR, AODV, DSDV.  Скорость передачи данных 8-2048 Кбит/сек. Число узлов с интерфейсом LTE - один. Размер передаваемого пакета 1024 байта. Плотность движения по трассе 8, 16 автомобилей на 800 метров. Скорость движения 10--100 миль/час. Потери сообщений определялись модулем анализатора трафика компьютерных сетей. 
+2.1 Рассмотрены протоколы маршрутизации HWMP, OLSR, AODV, DSDV.  Скорость передачи данных 8-2048 Кбит/сек. Число узлов с интерфейсом LTE - один. Размер передаваемого пакета 1024 байта. Плотность движения по трассе 8, 16 автомобилей на 800 метров. Скорость движения 10...100 миль/час. Потери сообщений определялись модулем анализатора трафика компьютерных сетей. 
 
 Достоверность доставки сообщений оценивалась в условиях высокой динамики изменения структуры сети. Изменения  происходят не реже одного раза в секунду.  В этих условиях интенсивность работы протоколов маршрутизации так же высокая и процент потерянных сообщений значительный. 
 
@@ -86,7 +86,7 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-На рисунке рис.~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде от использованных протоколов беспроводной маршрутизации и скорости передачи данных. 
+На рисунке рис.~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде, от использованных протоколов беспроводной маршрутизации и скорости передачи данных. 
  
 Потери сообщений составили от 10 до 46\%. Потери растут с увеличением скорости передачи. При увеличении скорости передачи в два раза объем потерянных сообщений увеличивается в три раза, по причине увеличения объёма широковещательных сообщений в запросах на построение пути. Наибольшие потери наблюдаются при использовании протокола OLSR. 
 
@@ -120,4 +120,4 @@
 
 \end{figure}
 
-Для 8 мобильных узлов (на 800 метров трассы),  среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс; для 16 узлов  4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами, связано возможностью построения дополнительных маршрутов передачи данных.
+Для 8 мобильных узлов (на 800 метров трассы), среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс; для 16 узлов  4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами, связано с возможностью построения дополнительных маршрутов передачи данных.
