--- a/summary.tex
+++ b/summary.tex
@@ -21,7 +21,7 @@
 
 Особенностью mesh сетей является динамически изменяемая топология и отсутствие априорной информации о расположении точек доступа к облачной среде, что определяет возможное наличие множества различных путей доставки информационных сообщений.
 
-Основным средством исследования поведения mesh сетей является имитационное моделирование, позволяющее выполнять различные сценарии поведения mesh сетей, не прибегая к реализации натурного эксперимента. В рамках данной работы была разработана модель автомобильной mesh сети, реализованной на основе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3.
+Основным средством исследования поведения mesh сетей является имитационное моделирование. В рамках данной работы была разработана модель автомобильной mesh сети, реализованной на основе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3.
 
 Анализ результатов моделирования показал что применение автомобильной mesh сети существенно повышает время доступности облачных сервисов обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети,свойств сетевого трафика и особенностей организации дорожного движения.
 }
