--- a/biblio.tex
+++ b/biblio.tex
@@ -7,7 +7,7 @@
 \bibliography{article_IP}{}
 
 \bibliographystyle{plain}
-
+%\bibliographystyle{gost780s}
 %\bibliographystyle{vak}
 
 %!!! Msadaa:2010:CSM:1848649.1849209
