--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,5 @@
 {\bf{\SetMySection}~Введение.} 
-Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределенные информационные ресурсы можно рассматривать как облачную среду [ ], предоставляющую сервисы мобильным абонентам.
+Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределенные информационные ресурсы можно рассматривать как облачную среду, предоставляющую сервисы мобильным абонентам.
 
 Абонентами  информационных услуг ИТС являются:
 
@@ -35,7 +35,7 @@
 
 \end{enumerate}
 
-Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объемы передаваемых сообщений 500-1000 байт [ ].
+Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объемы передаваемых сообщений 500-1000 байт [ГОСТ Р 54620-2011].
 
 Традиционно связь мобильных абонентов с облачными сервисам осуществляется через сеть стационарных станций телекоммуникационных компаний. Однако, стационарные станции не охватывают все регионы,
 %и устанавливают связь только в зоне прямой видимости мобильного абонента%
