--- a/summary.tex
+++ b/summary.tex
@@ -36,4 +36,20 @@
 
 {\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{The research service availability of mobile users in cloud oriented multiprotocol network.}
 
-{\small Text}
+{\small 
+A set of modern vehicles, road infrastructure and cloud computing resources forms an intelligent transportation network. The main goal of such network is improving safety and transportation comfort of the traffic participants.
+ 
+Exchange of messages between the vehicle and cloud environment is provided via dedicated network channel. Using this channel cloud environment gathers data about vehicles and road traffic, users gain access to emergency services, information, inquiry and entertainment resources.
+ 
+Problem in access to cloud environment services is absence of persistent dedicated wireless network channel, which leads to denial of service.
+ 
+Data transfer channel can be established with the help of automotive telematic devices or user's personal devices, such as PDA, laptop and easily accessible celullar network equipment.
+ 
+The solution which allows to improve quality of access to the cloud environment services is adaptation of mesh-networks with multiprotocol network interfaces that provide messages exchange using any available data transfer network.
+
+Feature of mesh networks is dynamically change the topology and the absence of a priori information about the location of points of access to the cloud, which determines the possible presence of a number of different ways to deliver information messages.
+
+The primary means of research the behavior of mesh networks is simulation, which allows scripts to perform various behaviors mesh networks. In this work, a model was developed automotive mesh network implemented on the basis of a model of traffic IDM means of discrete-event simulation of computer networks ns--3.
+
+Analysis of simulation results showed that the use of the automobile mesh network significantly increases the availability of cloud services while sharing emergency messages in a variety of configurations automotive mesh network, network traffic characteristics and peculiarities of traffic.
+}
