Ccskrb УДК и прочая мелочь

--- a/article_IP.bib
+++ b/article_IP.bib
@@ -92,3 +92,10 @@ ISSN={0891-7736},}
        year = {2013},
    location = {Reykjavic, Iceland}
 }
+
+@misc{GOST,
+  author = {Начиональный стандарт Российской Федерации},
+  title = {Глобальная навигационная спутниковая система. Система экстренного реагирования при авариях. Автомобильная система вызова экстренных оперативных служб. Общие технические требования},
+  howpublished = {Стандартинформ, Москва},
+  year = {2012},
+}
