--- a/article_IP.tex
+++ b/article_IP.tex
@@ -108,7 +108,7 @@
 }
 \makeatother
 
-{\footnotesize \noindent {\bf УДК} ХХХ.ХХ, ХХХ.ХХ}
+{\footnotesize \noindent {\bf УДК} 004.9, 629.36, 396.9}
 
 \begin{center}
 
@@ -157,20 +157,8 @@ vehicle services, mesh, 802.11s, LTE, IDM, cloud services, multiprotocol node, d
 %\section{Предлагаемые решения}
 \input{decision.tex}
 
-%\section{Автомобильные телекоммуникационные сервисы}
-%\input{auto.tex}
-
-%\section{Телематические технологии доступа к сервисам}
-%\input{telematics.tex}
-
-%\section{Облачно--ориентированная избыточная мультипротокольная сеть}
-%\input{cloud.tex}
-
 % \section{Реализация среды моделирования передачи сообщений в сети автомобилей}
 \input{implementation.tex}
-
-%\section{Исследование}
-%\input{research.tex}
 
 %\section{Заключение}
 \input{conclusion.tex}
