--- a/authors.tex
+++ b/authors.tex
@@ -6,7 +6,7 @@
 
 \vskip 1mm
 
-\noindent{\bf Glazunov V. Vadim}~Ч  PhD student of Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. neweagle@gmail.com; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-6521, Scientific advisor~--- Kurochkin~M/\,A.
+\noindent{\bf Glazunov V. Vadim}~Ч  PhD student of Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. neweagle@gmail.com; SPbSPU, Polytechnicheskaya st., 29, St. Peters- burg, 195251, Russia; office phone +7(812)552-6521, Scientific advisor~--- Kurochkin M.\,A.
 
 \vskip 1mm
 
@@ -14,7 +14,7 @@
 
 \vskip 1mm
 
-\noindent{\bf Leonid M. Kurochkin}~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Automated Control Systems, Simulation Modeling, Computer Networks. Number of publications --Ч 20. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+\noindent{\bf Leonid M. Kurochkin}~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Automated Control Systems, Simula- tion Modeling, Computer Networks. Number of publications --Ч 20. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
 
 \vskip 1mm
 
@@ -23,7 +23,7 @@
 \vskip 1mm
 
 \noindent{\bf Michail A. Kurochkin}~--- PhD in Technical Science, Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Computer Graphics, Hhuman Machine Interface, 
-Computer Simulation, Computer Networks. Number of publications --Ч 130. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+Computer Simula- tion, Computer Networks. Number of publications --Ч 130. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
 
 \vskip 1mm
 
@@ -31,7 +31,7 @@ Computer Simulation, Computer Networks. Number of publications --Ч 130. kurl@ya.
 
 \vskip 1mm
 
-\noindent{\bf Serge G. Popov}~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Database Theory, Database Management System, Project Management, Application Development, Computer Networks. Number of publications --Ч 42. popovserge@spbstu.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+\noindent{\bf Serge G. Popov}~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Database Theory, Database Management System, Project Manage- ment, Application Development, Computer Networks. Number of publications --Ч 42. popovserge@spbstu.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
 
 \vskip 1mm
 }
@@ -42,5 +42,5 @@ Computer Simulation, Computer Networks. Number of publications --Ч 130. kurl@ya.
 
 \noindent –екомендовано —ѕ»»–јЌ,
 
-\noindent —тать€ поступила в редакцию 03.09.2013.
+\noindent —тать€ поступила в редакцию 09.09.2013.
 }
