--- a/implementation.tex
+++ b/implementation.tex
@@ -1,12 +1,8 @@
-{\bf{\SetMySection} Описание экспериментов.} 
-
-В качестве ядра среды моделирования использовался дискретно-событийный стимулятор телекоммуникационных систем ns--3\cite{Nsnam.org}. Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL. Исходные коды ns--3 открыты для исследования, модификации. В качестве встроенного языка описания моделей используются C++ и Python.
+{\bf{\SetMySection} Описание экспериментов.} В качестве ядра среды моделирования использовался дискретно-событийный стимулятор телекоммуникационных систем ns--3\cite{Nsnam.org}. Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL. Исходные коды ns--3 открыты для исследования, модификации. В качестве встроенного языка описания моделей используются C++ и Python.
 
 В ns--3 разработаны модели как проводных, так и беспроводных сетей, позволяющие проводить моделирование смешанных сетей с топологиями различной сложности. Особый интерес в рамках данной работы представляет реализация mesh сетей на основе стека протоколов 802.11s.
 
 Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)\cite{5678993}.
-
-% Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках\cite{5678993}.
 
 \begin{figure}[!ht]
 \vspace{-10pt}
@@ -67,9 +63,7 @@
 
 Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик, передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Число узлов с интерфейсом LTE - один. Фактическая скорость передачи данных определялась модулем анализатора трафика компьютерных сетей. Экспериментальные результаты приведены на рис.   .
 
-%Снижение фактической скорости составляет 5-37\%. С увеличением скорости передачи фактическая скорость падает так как .  
 Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
-
 
 2.	Влияние параметров движения транспортных средств и протоколов на потери сообщений
 
