--- a/intro.tex
+++ b/intro.tex
@@ -1,9 +1,5 @@
 {\bf{\SetMySection}~Введение.} 
-<<<<<<< HEAD
-Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределенные информационные ресурсы можно рассматривать как облачную среду, предоставляющую сервисы мобильным абонентам.
-=======
-Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределённые информационные ресурсы можно рассматривать как облачную среду [ ], предоставляющую сервисы мобильным абонентам.
->>>>>>> 9bd0b1b498e3d854d40c742dac53fdd7e82d1b3d
+Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределённые информационные ресурсы можно рассматривать как облачную среду, предоставляющую сервисы мобильным абонентам.
 
 Абонентами  информационных услуг ИТС являются:
 
@@ -39,11 +35,7 @@
 
 \end{enumerate}
 
-<<<<<<< HEAD
-Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объемы передаваемых сообщений 500-1000 байт [ГОСТ Р 54620-2011].
-=======
-Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объёмы передаваемых сообщений 500-1000 байт [ ].
->>>>>>> 9bd0b1b498e3d854d40c742dac53fdd7e82d1b3d
+Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объемы передаваемых сообщений 500-1000 байт \cite{GOST}.
 
 Традиционно связь мобильных абонентов с облачными сервисам осуществляется через сеть стационарных станций телекоммуникационных компаний. Однако, стационарные станции не охватывают все регионы,
 %и устанавливают связь только в зоне прямой видимости мобильного абонента%
