--- a/summary.tex
+++ b/summary.tex
@@ -28,6 +28,8 @@
 
 \newpage
 
+\renewcommand{\baselinestretch}{1.13}
+
 \begin{center}
 
 {\large {\bf SUMMARY}}
@@ -43,7 +45,7 @@ Exchange of messages between the vehicle and cloud environment is provided via d
  
 Problem in access to cloud environment services is absence of persistent dedicated wireless network channel, which leads to denial of service.
  
-Data transfer channel can be established with the help of automotive telematic devices or user's personal devices, such as PDA, laptop and easily accessible celullar network equipment.
+Data transfer channel can be established with the help of automotive telematic devices or user's personal devices, such as PDA, laptop and easily accessible cellular network equipment.
  
 The solution which allows to improve quality of access to the cloud environment services is adaptation of mesh-networks with multiprotocol network interfaces that provide messages exchange using any available data transfer network.
 
