--- a/intro.tex
+++ b/intro.tex
@@ -26,7 +26,7 @@
 
 \item[$-$] мониторинг технического состояния автомобилей (дистанционный сбор данных об отказах и сбоях оборудования, аудио и видео консультации водителя о техническом состоянии автомобиля, дистанционная загрузка новых версий программного обеспечения, учитывающего особенности эксплуатации конкретного автомобиля, дистанционное управление агрегатами автомобиля: двигатель,     трансмиссия, устройства освещения);
 
-\item[$-$] выполнение финансовых расчётов при эксплуатации автомобиля (автоматическая оплата услуг (дорог, парковок, топлива);
+\item[$-$] выполнение финансовых расчётов при эксплуатации автомобиля (автоматическая оплата услуг: дорог, парковок, топлива);
 
 \item[$-$] комплексное решение эксплуатационных и транспортных задач (автоматическое сохранение треков движения транспортного средства с        видеофиксацией ключевых точек движения по времени или по событию, уточнение данных о дорожной обстановке в центре управления транспортными средствами);
 
