--- a/decision.tex
+++ b/decision.tex
@@ -1,7 +1,7 @@
 {\bf{\SetMySection} Предлагаемые решения.}
 В качестве решения поставленной задачи предлагается объединение известных технологий передачи данных  с мобильной mesh сетью (стандарт 802.11s). В условиях высокой динамики автомобильной сети режим mesh, обеспечивает процедуру самоорганизации абонентов. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно.
 
-Интеграция нескольких технологий передачи данных с mesh на борту автомобиля обеспечивает в каждый момент времени оптимальный выбор маршрута передачи сообщений с наибольшим временем продолжительности сеанса связи. Основным достоинством этого решения является возможность обеспечения канала связи при выходе абонента из зоны покрытия глобальной сети передачи данных. эти решения позволяют построить новую мобильную сеть дисциплиной связи <<точка --- узел выхода>>.
+Интеграция нескольких технологий передачи данных с mesh на борту автомобиля обеспечивает в каждый момент времени оптимальный выбор маршрута передачи сообщений с наибольшим временем продолжительности сеанса связи. Основным достоинством этого решения является возможность обеспечения канала связи при выходе абонента из зоны покрытия глобальной сети передачи данных. Эти решения позволяют построить новую мобильную сеть дисциплиной связи <<точка --- узел выхода>>.
 
 На практике, предложенное решение реализуется в виде  мультипротокольного ядра - программно-аппаратного сегмента бортового компьютера. Предложенное решение не снимает всех вопросов обеспечения доступа к информационным сервисам в зонах отсутствия устойчивой связи, так как изменение структуры мобильной сети, требует использования дополнительных средств поддержки маршрутизации сетевого трафика. Высокая динамика доступности маршрутов передачи данных во время передачи сообщения может привести к увеличению времени передачи и  потере сообщения. Основными параметрами влияющими на свойства подвижной mesh--сети  передачи данных являются скорости движения мобильных объектов, взаимное расположение узлов сети, радиус действия передатчиков и время подключения к сети. 
 
