Поменялись аннотация и реферат на английском языке

--- a/article_IP.bib
+++ b/article_IP.bib
@@ -94,7 +94,7 @@ ISSN={0891-7736},}
 }
 
 @misc{GOST,
-  author = {Начиональный стандарт Российской Федерации},
+  author = {Национальный стандарт Российской Федерации},
   title = {Глобальная навигационная спутниковая система. Система экстренного реагирования при авариях. Автомобильная система вызова экстренных оперативных служб. Общие технические требования},
   howpublished = {Стандартинформ, Москва},
   year = {2012},
