--- a/summary.tex
+++ b/summary.tex
@@ -28,7 +28,7 @@
 
 \newpage
 
-\renewcommand{\baselinestretch}{1.13}
+\renewcommand{\baselinestretch}{1.2}
 
 \begin{center}
 
@@ -49,9 +49,9 @@ Data transfer channel can be established with the help of automotive telematic d
  
 The solution which allows to improve quality of access to the cloud environment services is adaptation of mesh-networks with multiprotocol network interfaces that provide messages exchange using any available data transfer network.
 
-Feature of mesh networks is dynamically change the topology and the absence of a priori information about the location of points of access to the cloud, which determines the possible presence of a number of different ways to deliver information messages.
-
-The primary means of research the behavior of mesh networks is simulation, which allows scripts to perform various behaviors mesh networks. In this work, a model was developed automotive mesh network implemented on the basis of a model of traffic IDM means of discrete-event simulation of computer networks ns--3.
-
-Analysis of simulation results showed that the use of the automobile mesh network significantly increases the availability of cloud services while sharing emergency messages in a variety of configurations automotive mesh network, network traffic characteristics and peculiarities of traffic.
+The feature of mesh-networks is dynamically changing topology and absence of a priory information about arrangement of cloud environment access points, all of which defines possible existence of many different routes for information messages delivery.
+ 
+The main method of analysis of the behavior of mesh-networks is simulation which allows to perform different scenarios of mesh-network behavior without implementation of full-scale experiment. Within the bounds of this work the model of automotive mesh-network was developed on basis of IDM traffic model and implemented through NS-3 discrete-event simulator of computer networks.
+ 
+Analysis of simulation results has revealed that use of automotive mesh-network substantially increases availability of emergency messages exchange cloud services in different configurations of automotive mesh network, network traffic properties and road traffic characteristics.
 }
